package net.civeira.phylax.features.access.consentpurpose.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.consentpurpose.domain.event.ConsentPurposeCreateEvent;
import net.civeira.phylax.features.access.consentpurpose.domain.event.ConsentPurposeDeleteEvent;
import net.civeira.phylax.features.access.consentpurpose.domain.event.ConsentPurposeEvent;
import net.civeira.phylax.features.access.consentpurpose.domain.event.ConsentPurposeUpdateEvent;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.ActivationDateVO;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.DescriptionVO;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.KeyVO;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.RequiredVO;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.TenantVO;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.TitleVO;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.consentpurpose.domain.valueobject.VersionVO;

/**
 * consent-purpose
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class ConsentPurpose implements ConsentPurposeRef {

  /**
   * Prepare a new consent purpose with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new consent purpose
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed consent purpose.
   */
  public static ConsentPurpose create(final ConsentPurposeChangeSet change)
      throws ConstraintException {
    ConsentPurpose instance = new ConsentPurpose(change, Optional.empty());
    instance.addEvent(ConsentPurposeCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El activation date de consent purpose
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private ActivationDateVO activationDateValue;

  /**
   * El description de consent purpose
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private DescriptionVO descriptionValue;

  /**
   * El key de consent purpose
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private KeyVO keyValue;

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<ConsentPurposeEvent> recordedEvents = List.of();

  /**
   * El required de consent purpose
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private RequiredVO requiredValue;

  /**
   * El tenant de consent purpose
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TenantVO tenantValue;

  /**
   * El title de consent purpose
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TitleVO titleValue;

  /**
   * A number to identify the db record
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * Campo con el número de version de consent purpose para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private ConsentPurpose(final ConsentPurposeChangeSet attribute,
      final Optional<ConsentPurpose> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.tenantValue = attribute.readTenant(previous, list);
    this.keyValue = attribute.readKey(previous, list);
    this.titleValue = attribute.readTitle(previous, list);
    this.descriptionValue = attribute.readDescription(previous, list);
    this.requiredValue = attribute.readRequired(previous, list);
    this.activationDateValue = attribute.readActivationDate(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on ConsentPurpose", list);
    }
    this.recordedEvents = previous.map(ConsentPurpose::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a consent purpose
   *
   * @autogenerated EntityGenerator
   * @return A instance of consent purpose ready to be deleted
   */
  public ConsentPurpose delete() {
    ConsentPurpose instance = new ConsentPurpose(new ConsentPurposeChangeSet(), Optional.of(this));
    instance.addEvent(ConsentPurposeDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(8);
    uidToMap(map);
    tenantToMap(map);
    keyToMap(map);
    titleToMap(map);
    descriptionToMap(map);
    requiredToMap(map);
    activationDateToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a consent purpose
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of consent purpose
   */
  public ConsentPurpose update(final ConsentPurposeChangeSet change) throws ConstraintException {
    ConsentPurpose instance = new ConsentPurpose(change, Optional.of(this));
    instance.addEvent(ConsentPurposeUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public ConsentPurpose withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final ConsentPurposeEvent event) {
    List<ConsentPurposeEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
