package net.civeira.phylax.features.access.userconsentpurposes.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.userconsentpurposes.domain.event.UserConsentPurposesCreateEvent;
import net.civeira.phylax.features.access.userconsentpurposes.domain.event.UserConsentPurposesDeleteEvent;
import net.civeira.phylax.features.access.userconsentpurposes.domain.event.UserConsentPurposesEvent;
import net.civeira.phylax.features.access.userconsentpurposes.domain.event.UserConsentPurposesUpdateEvent;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.ConsentPurposeVO;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.DecisionAtVO;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.GrantedVO;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.IpAddressVO;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.UserAgentVO;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.UserVO;
import net.civeira.phylax.features.access.userconsentpurposes.domain.valueobject.VersionVO;

/**
 * user-consent-purposes
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class UserConsentPurposes implements UserConsentPurposesRef {

  /**
   * Prepare a new user consent purposes with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new user consent purposes
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed user consent purposes.
   */
  public static UserConsentPurposes create(final UserConsentPurposesChangeSet change)
      throws ConstraintException {
    UserConsentPurposes instance = new UserConsentPurposes(change, Optional.empty());
    instance.addEvent(UserConsentPurposesCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El consent purpose de user consent purposes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private ConsentPurposeVO consentPurposeValue;

  /**
   * El decision at de user consent purposes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private DecisionAtVO decisionAtValue = DecisionAtVO.nullValue();

  /**
   * El granted de user consent purposes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private GrantedVO grantedValue;

  /**
   * El ip address de user consent purposes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private IpAddressVO ipAddressValue = IpAddressVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<UserConsentPurposesEvent> recordedEvents = List.of();

  /**
   * A number to identify the db record
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El user agent de user consent purposes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private UserAgentVO userAgentValue = UserAgentVO.nullValue();

  /**
   * El user de user consent purposes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UserVO userValue;

  /**
   * Campo con el número de version de user consent purposes para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private UserConsentPurposes(final UserConsentPurposesChangeSet attribute,
      final Optional<UserConsentPurposes> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.userValue = attribute.readUser(previous, list);
    this.consentPurposeValue = attribute.readConsentPurpose(previous, list);
    this.grantedValue = attribute.readGranted(previous, list);
    this.decisionAtValue = attribute.readDecisionAt(previous, list);
    this.ipAddressValue = attribute.readIpAddress(previous, list);
    this.userAgentValue = attribute.readUserAgent(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on UserConsentPurposes", list);
    }
    this.recordedEvents = previous.map(UserConsentPurposes::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a user consent purposes
   *
   * @autogenerated EntityGenerator
   * @return A instance of user consent purposes ready to be deleted
   */
  public UserConsentPurposes delete() {
    UserConsentPurposes instance =
        new UserConsentPurposes(new UserConsentPurposesChangeSet(), Optional.of(this));
    instance.addEvent(UserConsentPurposesDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(8);
    uidToMap(map);
    userToMap(map);
    consentPurposeToMap(map);
    grantedToMap(map);
    decisionAtToMap(map);
    ipAddressToMap(map);
    userAgentToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a user consent purposes
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of user consent purposes
   */
  public UserConsentPurposes update(final UserConsentPurposesChangeSet change)
      throws ConstraintException {
    UserConsentPurposes instance = new UserConsentPurposes(change, Optional.of(this));
    instance.addEvent(UserConsentPurposesUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public UserConsentPurposes withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final UserConsentPurposesEvent event) {
    List<UserConsentPurposesEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
