' @autogenerated
@startuml
left to right direction
title Clases para user consent purposes
class access.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}
class access.ConsentPurpose{
uid:string
key:ConsentPurposeKeyOptions
title:string
description:blob
required:boolean
activationDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
}
class access.UserConsentPurposes{
uid:string
granted:boolean
decisionAt:datetime
ipAddress:string
userAgent:string
version:integer
list()
retrieve()
create()
update()
delete()
}
access.User "1"  o--  "N*" access.UserConsentPurposes: user
access.ConsentPurpose "1"  o--  "N*" access.UserConsentPurposes: consentPurpose

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
